force-app/main/default/objects/Account/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsParent</label>
    <type>Checkbox</type>
</CustomField>