force-app/main/default/objects/Account/fields/New_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Phone__c</fullName>
    <label>New Phone</label>
    <type>Phone</type>
</CustomField>